terraform/terragrunt/local/kind-argocd/apps/azure-auth-gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-auth-gateway-nginx
  labels:
    app.kubernetes.io/name: azure-auth-gateway-nginx
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/managed-by: nginx-gateway-nginx
    gateway.networking.k8s.io/gateway-name: azure-auth-gateway
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/managed-by: nginx-gateway-nginx
    app.kubernetes.io/name: azure-auth-gateway-nginx
    gateway.networking.k8s.io/gateway-name: azure-auth-gateway
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 30070
